# portal-visualization

./: .gitignore  MANIFEST.in  README.md  ann.zarr.json  ann.zarr.zip.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  test.sh
.github/: copilot-instructions.md
.github/workflows/: portal-ci.yml  publish-pypi.yml
src/: __init__.py  builder_factory.py  defaults.json  utils.py  vis-preview.py
src/builders/: anndata_builders.py  base_builders.py  imaging_builders.py  scatterplot_builders.py  sprm_builders.py
src/portal_visualization/: __init__.py  assays.py  builder_factory.py  cli.py  client.py  constants.py  epic_factory.py  mock_client.py  paths.py  test_client.py  utils.py
src/portal_visualization/builders/: anndata_builders.py  anndata_builders1.py  base_builders.py  epic_builders.py  imaging_builders.py  integrative_builders.py  object_by_analyte_builders.py  scatterplot_builders.py  sprm_builders.py
test/: test_builders.py  test_client.py  test_epic_builders.py
test/assaytype-fixtures/: f9ae931b8b49252f150d7f8bf1d2d13f-bad.json
test/bad-fixtures/: empty-error.txt  fake-asct-http404-published-no-files-error.txt  fake-is-not-annotated-published-no-files-entity.json  fake-is-not-annotated-published-no-files-error.txt  fake-object-by-analyte-entity.json  image-pyramid-missing-ometiff-entity.json  image-pyramid-missing-ometiff-error.txt  missing-files-entity.json  missing-files-error.txt  missing-secondary-analysis-object-by-analyte-entity.json  missing-zarr-object-by-analyte-entity.json  missing-zarr-object-by-analyte-error.txt  scatterplot-entity.json  scatterplot-error.txt  seqfish-missing-ometiff-entity.json  seqfish-missing-ometiff-error.txt  sprm-with-cells-entity.json  sprm-with-cells-error.txt  stitched-cytokit-missing-ometiff-entity.json  stitched-cytokit-missing-ometiff-error.txt  stitched-cytokit-missing-reg-entity.json  stitched-cytokit-missing-reg-error.txt  stitched-cytokit-missing-zgroup-entity.json  stitched-cytokit-missing-zgroup-error.txt  with-cells-entity.json  with-cells-error.txt
test/fixtures/MultiImageSPRMAnndataViewConfBuilder/: fake-entity.json
test/fixtures/RNASeqAnnDataZarrViewConfBuilder/: 503f9caeffb9ee1e1324793c977d2342-conf.json  503f9caeffb9ee1e1324793c977d2342-entity.json  fake-asct-200-entity.json  fake-asct-http200-published-conf.json  fake-asct-http404-published-conf.json  fake-asct-http404-published-entity.json  fake-asct-http404-qa-conf.json  fake-azimuth-entity.json  fake-entity.json  fake-kidney-conf.json  fake-kidney-entity.json
test/good-fixtures/ATACSeqViewConfBuilder/: fake-conf.json  fake-config.json  fake-entity.json
test/good-fixtures/GeoMxImagePyramidViewConfBuilder/: fake-conf.json  fake-entity.json  fake-zarr-zip-conf.json  fake-zarr-zip-entity.json
test/good-fixtures/IMSViewConfBuilder/: fake-conf.json  fake-entity.json
test/good-fixtures/ImagePyramidViewConfBuilder/: fake-conf.json  fake-config.json  fake-entity.json
test/good-fixtures/KaggleSegImagePyramidViewConfBuilder/: fake-conf.json  fake-entity.json
test/good-fixtures/MultiImageSPRMAnndataViewConfBuilder/: fake-conf.json  fake-entity.json  fake-marker=gene123-conf.json  fake-marker=gene123-entity.json
test/good-fixtures/MultiomicAnndataZarrViewConfBuilder/: fake-multiome-conf.json  fake-multiome-entity.json  fake-multiome-is-annotated-conf.json  fake-multiome-is-annotated-entity.json  fake-multiome-is-annotated-pan-az-conf.json  fake-multiome-pan-az-conf.json
test/good-fixtures/NanoDESIViewConfBuilder/: fake-conf.json  fake-entity.json
test/good-fixtures/NullViewConfBuilder/: empty-entity.json  fake-no-support-entity.json  missing-metadata.json
test/good-fixtures/ObjectByAnalyteConfBuilder/: fake-object-by-analyte-conf.json  fake-object-by-analyte-entity.json  many-embeddings-object-by-analyte-conf.json  many-embeddings-object-by-analyte-entity.json  no-feature-labels-object-by-analyte-conf.json  no-feature-labels-object-by-analyte-entity.json  single-embedding-object-by-analyte-conf.json  single-embedding-object-by-analyte-entity.json  spatial-object-by-analyte-conf.json  spatial-object-by-analyte-entity.json  three-embeddings-object-by-analyte-conf.json  three-embeddings-object-by-analyte-entity.json  uniprot-object-by-analyte-conf.json  uniprot-object-by-analyte-entity.json  zero-dimensions-object-by-analyte-conf.json  zero-dimensions-object-by-analyte-entity.json
test/good-fixtures/RNASeqAnnDataZarrViewConfBuilder/: fake-asct-http200-published-conf.json  fake-asct-http200-published-config.json  fake-asct-http200-qa-conf.json  fake-asct-http200-qa-config.json  fake-asct-http404-published-conf.json  fake-asct-http404-qa-conf.json  fake-asct-http404-qa-config.json  fake-asct-is-annotated-published-conf.json  fake-asct-is-annotated-qa-conf.json  fake-asct-is-annotated-qa-entity.json  fake-asct-is-annotated-zip-published-conf.json  fake-asct-is-annotated-zip-published-entity.json  fake-is-annotated-pan-az-published-conf.json  fake-is-not-annotated-minimal-published-conf.json  fake-is-not-annotated-minimal-published-entity.json  fake-is-not-annotated-published-conf.json  fake-is-not-annotated-published-entity.json  fake-is-not-annotated-qa-conf.json  fake-predicted-clid-is-annotated-published-conf.json  fake-predicted-clid-is-annotated-published-entity.json  fake-predicted-label-is-annotated-published-conf.json  fake-predicted-label-is-annotated-qa-conf.json  fake-predicted-label-is-annotated-qa-entity.json
test/good-fixtures/RNASeqViewConfBuilder/: fake-conf.json  fake-config.json  fake-entity.json
test/good-fixtures/SegImagePyramidViewConfBuilder/: fake-conf.json  fake-entity.json
test/good-fixtures/SegmentationMaskBuilder/: fake-conf.json  fake-entity.json  fake-zarr-zip-conf.json  fake-zarr-zip-entity.json
test/good-fixtures/SeqFISHViewConfBuilder/: fake-conf.json  fake-entity.json
test/good-fixtures/SpatialMultiomicAnnDataZarrViewConfBuilder/: fake-conf.json  fake-visium-conf.json  fake-visium-entity.json
test/good-fixtures/TiledSPRMViewConfBuilder/: no-cells-conf.json  (+3 more)
(+16 files in other folders)
