[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "portal-visualization"
dynamic = ["version"]
description = "Given HuBMAP Dataset JSON, creates a Vitessce configuration."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Chuck McCallum", email = "mccallucc@gmail.com" }]
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "vitessce==3.7.4",
  "hubmap-commons>=2.0.15",
  "requests>=2.27.1",
  "nbformat>=5.1.3",
  "zarr>=2.17.2",
  "aiohttp>=3.8.1",
  "fsspec>=2022.1.0",
  "python-datauri>=2.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "pytest-mock>=3.7.0",
  "coverage>=7.6.4",
  "pyyaml>=6.0.2",
  "ruff>=0.8.0",
]

[project.urls]
Homepage = "https://github.com/hubmapconsortium/portal-visualization"

[tool.setuptools]
package-dir = { "" = "src" }
script-files = ["src/vis-preview.py"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { file = "VERSION.txt" }

[tool.pytest.ini_options]
filterwarnings = [
  "ignore:Passing a schema to Validator\\.iter_errors is deprecated",
]
testpaths = ["test"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-vv", "--doctest-modules"]

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = [".venv", ".git", "__pycache__", "build", "dist", "*.egg-info"]

[tool.ruff.lint]
select = [
  "E",
  "W",
  "F",
  "I",
  "UP",
  "B",
  "C4",
  "ISC",
  "PIE",
  "PT",
  "RSE",
  "RET",
  "SIM",
]
ignore = [
  "E501",   # line too long (handled by formatter)
  "N813",   # camelcase imported as lowercase (common pattern in this codebase)
  "N817",   # camelcase imported as acronym (common pattern in this codebase)
  "B006",   # mutable default argument (legacy pattern, can be fixed later)
  "RET503", # missing explicit return (common pattern)
  "RET504", # unnecessary assignment before return (style choice)
  "RET505", # unnecessary else/elif after return (style choice)
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.coverage.run]
source = ["src"]
omit = ["*/test/*", "*/__pycache__/*"]

[tool.coverage.report]
show_missing = true
fail_under = 100
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
]
