[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "portal-visualization"
dynamic = ["version"]
description = "Given HuBMAP Dataset JSON, creates a Vitessce configuration."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Chuck McCallum", email = "mccallucc@gmail.com" }]
maintainers = [
  { name = "HIDIVE Lab at Harvard Medical School", email = "hidive@hms.harvard.edu" },
  { name = "Nikolay Akhmetov", email = "nikolay_akhmetov@hms.harvard.edu" },
  { name = "Tabassum Kakar", email = "tabassum_kakar@hms.harvard.edu" },
  { name = "John Conroy", email = "john_conroy@hms.harvard.edu" },
  { name = "Lisa Choy", email = "lisa_choy@hms.harvard.edu" },
]
requires-python = ">=3.10"
keywords = [
  "hubmap",
  "vitessce",
  "visualization",
  "bioinformatics",
  "imaging",
  "sequencing",
  "single-cell",
  "spatial-transcriptomics",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Topic :: Scientific/Engineering :: Visualization",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
# Core install has no dependencies - only provides has_visualization() function
# For full visualization generation capabilities, install with: pip install portal-visualization[full]
dependencies = []

[project.optional-dependencies]
# Full install - required for actual visualization generation
full = [
  "vitessce==3.7.4",
  "hubmap-commons>=2.0.15",
  # Flask/werkzeug are needed for the full HuBMAP Search API client functionality
  "flask>=2.0.0",
  "werkzeug>=2.0.0",
  "requests>=2.27.1",
  "nbformat>=5.1.3",
  "zarr>=2.17.2",
  "aiohttp>=3.8.1",
  "fsspec>=2022.1.0",
  "python-datauri>=2.2.0",
]
# Development dependencies
dev = [
  "pytest>=7.0.0",
  "pytest-mock>=3.7.0",
  "coverage>=7.6.4",
  "pyyaml>=6.0.2",
  "ruff>=0.8.0",
  "build>=0.10.0",
]
# Convenience: install everything for development
all = ["portal-visualization[full,dev]"]

[project.scripts]
vis-preview = "portal_visualization.cli:main"

[project.urls]
Homepage = "https://github.com/hubmapconsortium/portal-visualization"
"Bug Tracker" = "https://github.com/hubmapconsortium/portal-visualization/issues"
"Source Code" = "https://github.com/hubmapconsortium/portal-visualization"
Documentation = "https://github.com/hubmapconsortium/portal-visualization#readme"
Changelog = "https://github.com/hubmapconsortium/portal-visualization/releases"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
portal_visualization = ["defaults.json"]

[tool.setuptools.dynamic]
version = { file = "VERSION.txt" }

[tool.pytest.ini_options]
filterwarnings = [
  "ignore:Passing a schema to Validator\\.iter_errors is deprecated",
]
testpaths = ["test"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-vv", "--doctest-modules"]
markers = [
  "requires_full: marks tests as requiring the [full] install (deselect with '-m \"not requires_full\"')",
]

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = [".venv", ".git", "__pycache__", "build", "dist", "*.egg-info"]

[tool.ruff.lint]
select = [
  "E",
  "W",
  "F",
  "I",
  "UP",
  "B",
  "C4",
  "ISC",
  "PIE",
  "PT",
  "RSE",
  "RET",
  "SIM",
]
ignore = [
  "E501",   # line too long (handled by formatter)
  "N813",   # camelcase imported as lowercase (common pattern in this codebase)
  "N817",   # camelcase imported as acronym (common pattern in this codebase)
  "B006",   # mutable default argument (legacy pattern, can be fixed later)
  "RET503", # missing explicit return (common pattern)
  "RET504", # unnecessary assignment before return (style choice)
  "RET505", # unnecessary else/elif after return (style choice)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.coverage.run]
source = ["src"]
omit = ["*/test/*", "*/__pycache__/*"]

[tool.coverage.report]
show_missing = true
fail_under = 100
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
]
