[metadata]
name = portal-visualization
version = file: VERSION.txt
author = Chuck McCallum
author_email = mccallucc@gmail.com
description = Given HuBMAP Dataset JSON, creates a Vitessce configuration.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hubmapconsortium/portal-visualization
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    vitessce==1.0.5
    hubmap-commons>=2.0.12
    requests>=2.27.1
    nbformat==5.1.3

[options.packages.find]
where = src

[flake8]
max-line-length = 99
ignore =
  W503 # "line break before binary operator": Prefer operator at start of line so the context is clear.
