[metadata]
name = portal-visualization
version = file: VERSION.txt
author = Chuck McCallum
author_email = mccallucc@gmail.com
description = Given HuBMAP Dataset JSON, creates a Vitessce configuration.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hubmapconsortium/portal-visualization
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
scripts = 
    src/vis-preview.py
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    # Currently pinned due to the added `spatialdata` dependency 
    # having a lot of uncapped dependencies that are causing conflicts with search-api downstream.
    vitessce==3.4.0
    hubmap-commons>=2.0.15
    requests>=2.27.1
    nbformat==5.1.3
    zarr>=2.17.2
    aiohttp>=3.8.1
    fsspec>=2022.1.0
    python-datauri>=2.2.0

[options.packages.find]
where = src

[flake8]
max-line-length = 120
ignore = W503 

# W503: "line break before binary operator": Prefer operator at start of line so the context is clear.
